--- a/site/index.html
+++ b/site/index.html
@@ -25,29 +25,35 @@
 
 
 <center>
-<div id= "block_news">
-	<div id =hello>
-	<h1>HELLO WORLD </h1>
-</div>
-<img src="C:\Users\USER\Pictures\moooooood\Smart-Homes.jpg" width="1900" height="1000">
-
-</div>
+<div id="soc">	
+<img src ="image1.png "> 
 </center>
 
+</div>
 
+<center>
+	<div id="soc1">
+<img src = "ima.png">		
+ </div>		
+</center>
 
-
+<center>
+	<h1>FAGASG</h1>
+</center>
  
 
 <div class="menu">
   <nav class="menu__nav">
     <ul class="r-list menu__list">
+    	<center>
       <li class="menu__group">
-        <a href="#0" class="r-link menu__link">Home</a>
+      	<center>
+       <big><h1> <a href="#0" class="r-link menu__link">Home</a></h1></big>
       </li>
       <li class="menu__group">
-        <a href="#0" class="r-link menu__link">Контакты</a>
+       <big><h1>  <a href="#0" class="r-link menu__link">Контакты</a></h1></big>
       </li>
+      </center>
     </ul>
   </nav>
   <div class="menu__toggle">
