--- a/site/contacts.html
+++ b/site/contacts.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <head>
 	<title>Blessed Home</title>
-	<link  rel="stylesheet"    href= "C:\Users\USER\Desktop\site\style1.css"  type="text/css" >
+   <link rel="shortcut icon" href="bh.png" type="image/png">
+  <meta charset="utf-8"/>
+	<link  rel="stylesheet"    href= "style1.css"  type="text/css" >
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 	
+	<h1><big>НАША ПОЧТА  home.bles@yandex.ru  </big></h1>
+
 	 <div  class="button">
     
-    <a href="">Email </a>
+    <a href="https://mail.yandex.ru/u2709/?uid=1015492366#compose">Email </a>
 
    </div>	
 
