--- a/site/index.html
+++ b/site/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <head>
 <title>Blessed Home</title>	
-<link  rel="stylesheet"    href= "C:\Users\USER\Desktop\site\style1.css"  type="text/css" >
+<meta charset="utf-8"/>
+<link rel="shortcut icon" href="bh.png" type="image/png">
+
+<link  rel="stylesheet"    href= "style1.css"  type="text/css" >
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 <body>
 <center>
@@ -28,7 +33,11 @@
 <img src = "ima.png">		
  </div>		
 </center>
-
+<center>
+    <div id="soc2">
+    <img src ="girl_is_getting_present1.jpg ">	
+    </div>	
+</center>
   
 
 	
