--- a/site/rew.html
+++ b/site/rew.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <head>
-	<title>Blessed Home</title>
-	<link  rel="stylesheet"    href= "C:\Users\USER\Desktop\site\style1.css"  type="text/css" >
+  <title>Blessed home </title>
+  <meta charset="utf-8"/>
+  <link rel="shortcut icon" href="bh.png" type="image/png">
+
+	<link  rel="stylesheet"    href= "style1.css"  type="text/css" >
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 	
-	
-  
+<header>
+  <img src="header_site.png" >
+
+   
+</header>
+<center>
+<div id="sac"> 
+<img src="rew2.png">
+</div>	
+</center> 
 
 <div class="menu">
   <nav class="menu__nav">
