--- a/site/contacts.html
+++ b/site/contacts.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
 	<title>Blessed Home</title>
+
    <link rel="shortcut icon" href="bh.png" type="image/png">
   <meta charset="utf-8"/>
 	<link  rel="stylesheet"    href= "style1.css"  type="text/css" >
@@ -40,11 +41,11 @@
     </ul>
   </nav>
   <div class="menu__toggle">
-    <button class="r-button menu__hamburger">
+    <button1 class="r-button menu__hamburger">
       <span class="m-hamburger">
         <span class="m-hamburger__label">Open menu</span>
       </span>
-    </button>
+    </button1>
   </div>  
 </div>
 
