--- a/site/index.html
+++ b/site/index.html
@@ -60,11 +60,11 @@
     </ul>
   </nav>
   <div class="menu__toggle">
-    <button class="r-button menu__hamburger">
+    <button1 class="r-button menu__hamburger">
       <span class="m-hamburger">
         <span class="m-hamburger__label">Open menu</span>
       </span>
-    </button>
+    </button1>
   </div>  
 </div>
 
