--- a/site/rew.html
+++ b/site/rew.html
@@ -15,11 +15,16 @@
    
 </header>
 
+
+
+
 <center>
 <div id="sac"> 
 <img src="rew3.png">
 </div>	
 </center> 
+
+
 
 //всплывающие окно 
 <div class='hover_body' id='hover' onclick='popUpHide()'></div>
@@ -105,5 +110,10 @@
 
 
   </script>
+
+<footer> 
+    
+       
+    </footer>
 
 </body>
