--- a/site/index.html
+++ b/site/index.html
@@ -20,6 +20,11 @@
 
 
 
+<center>
+  <div id="soc1">
+<img src = "ima2.png">    
+ </div>   
+</center>
 
 <center>
 <div id="soc">	
@@ -28,15 +33,12 @@
 
 </div>
 
-<center>
-	<div id="soc1">
-<img src = "ima.png">		
- </div>		
-</center>
+
 <center>
     <div id="soc2">
     <img src ="girl_is_getting_present1.jpg ">	
-    </div>	
+    </div>
+    
 </center>
   
 
@@ -103,4 +105,8 @@
   </script>
 
 </center>
+<footer> 
+ 
+
+    </footer>
 </body>
