--- a/site/contacts.html
+++ b/site/contacts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 	<title>Blessed Home</title>
-
+<meta name="viewport" content=" initial-scale=50%">
    <link rel="shortcut icon" href="bh.png" type="image/png">
   <meta charset="utf-8"/>
 	<link  rel="stylesheet"    href= "style1.css"  type="text/css" >
