--- a/site/rew.html
+++ b/site/rew.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>Blessed home </title>
+  <meta name="viewport" content=" initial-scale=50%">
   <meta charset="utf-8"/>
   <link rel="shortcut icon" href="bh.png" type="image/png">
 
@@ -21,6 +22,10 @@
 <center>
 <div id="sac"> 
 <img src="rew3.png">
+</div>
+
+<div id="aaa">
+  <img src="aaphone1.png">
 </div>	
 </center> 
 
