--- a/site/index.html
+++ b/site/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <head>
-<title>Blessed Home</title>	
+<title>Blessed Home</title>
+<meta name="viewport" content=" initial-scale=50%">
 <meta charset="utf-8"/>
 <link rel="shortcut icon" href="bh.png" type="image/png">
+<script type="javascript 
+">jquery-3.4.1.js</script>
 
 <link  rel="stylesheet"    href= "style1.css"  type="text/css" >
-<meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 <body>
