--- a/site/contacts.html
+++ b/site/contacts.html
@@ -5,9 +5,9 @@
    <link rel="shortcut icon" href="bh.png" type="image/png">
   <meta charset="utf-8"/>
 	<link  rel="stylesheet"    href= "style1.css"  type="text/css" >
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+ 
 </head>
-<body>
+<body background="gray.png">
 
 <div id="soc4"> 
 
