--- a/site/index.html
+++ b/site/index.html
@@ -1,16 +1,16 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <head>
-<title>Blessed Home</title>
+<title>Blessed Home</title>	
 <meta name="viewport" content=" initial-scale=50%">
+<link rel="stylesheet" href="css/bootstrap.min.css" >
 <meta charset="utf-8"/>
 <link rel="shortcut icon" href="bh.png" type="image/png">
-<script type="javascript 
-">jquery-3.4.1.js</script>
 
 <link  rel="stylesheet"    href= "style1.css"  type="text/css" >
 
+
 </head>
-<body>
+<body background="forest3.jpg">
 <center>
 <div id="sorces">	
 <header>
@@ -24,24 +24,11 @@
 
 <center>
   <div id="soc1">
-<img src = "ima2.png">    
+<img src = "ima4.png">    
  </div>   
 </center>
 
-<center>
-<div id="soc">	
-<img src ="image1.png "> 
-</center>
 
-</div>
-
-
-<center>
-    <div id="soc2">
-    <img src ="girl_is_getting_present1.jpg ">	
-    </div>
-    
-</center>
   
 
 	
