--- a/site/rew.html
+++ b/site/rew.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <head>
   <title>Blessed home </title>
-  <meta name="viewport" content=" initial-scale=50%">
+  <meta name="viewport" content=" initial-scale=33%">
   <meta charset="utf-8"/>
   <link rel="shortcut icon" href="bh.png" type="image/png">
 
-	<link  rel="stylesheet"    href= "style1.css"  type="text/css" >
+	<link  rel="stylesheet"    href= "style2.css"  type="text/css" >
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body>
+<body background="stonewall.jpg">
 	
 <header>
   <img src="header_site.png" >
@@ -22,12 +22,24 @@
 <center>
 <div id="sac"> 
 <img src="rew3.png">
-</div>
-
-<div id="aaa">
-  <img src="aaphone1.png">
 </div>	
 </center> 
+
+<div id="hong_advertisment">
+<a href="photos.html"> 
+<img src="bacs34.png"></a> 
+
+<hr>
+
+<hr>
+
+
+<img src="bacs45.png">
+
+</div>
+
+
+
 
 
 
@@ -36,7 +48,8 @@
   <button onclick="popUp()" id='button'><big><h1>VERSION</h1> </big></button><a href='' id='f' onclick='hello()'>hello</a>
   <div class='popup' id='popup'>
     <div class='header'> <center>  <p1><h1 href='#'onclick='popUpHide()'><big><h1>  
-     Текущая версия Blessed Home: 1.0.0<br> <h1>Developed by "Blessedsoft company"  </h1> </h1> </big > </h1></p1 > </center> </div>
+     Текущая версия Blessed Home: 1.0.0<br> <h1>Developed by "Blessedsoft company"  </h1> </h1> </big > </h1></p1 >
+    </center> </div>
     <div class='body'></div>
     <div class='footer'></div>
     <script type="text/javascript">
